@@ -1,12 +1,27 @@
 from ftw.builder.testing import BUILDER_LAYER
 from ftw.builder.testing import functional_session_factory
 from ftw.builder.testing import set_builder_session_factory
+from ftw.keywordwidget.behavior import IKeywordUseCases
 from plone.app.testing import applyProfile
 from plone.app.testing import FunctionalTesting
 from plone.app.testing import PLONE_FIXTURE
 from plone.app.testing import PloneSandboxLayer
+from plone.indexer import indexer
 from plone.testing import z2
+from Products.CMFCore.interfaces import IContentish
+from zope.component import provideAdapter
 from zope.configuration import xmlconfig
+
+
+def _setup_catalog_for_tests(portal):
+    @indexer(IContentish)
+    def unicode_keywords(obj):
+        return IKeywordUseCases(obj).unicode_keywords
+
+    provideAdapter(unicode_keywords)
+
+    catalog = portal.portal_catalog
+    catalog.addIndex('unicode_keywords', 'KeywordIndex')
 
 
 class FtwLayer(PloneSandboxLayer):
@@ -30,6 +45,7 @@ class FtwLayer(PloneSandboxLayer):
 
     def setUpPloneSite(self, portal):
         applyProfile(portal, 'ftw.keywordwidget:default')
+        _setup_catalog_for_tests(portal)
 
 
 FTW_FIXTURE = FtwLayer()
