@@ -5,7 +5,8 @@ Changelog
 1.1.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Implement new option to create new terms with unicode values instead of utf-8.
+  [mathias.leimgruber]
 
 
 1.1.4 (2017-03-20)
